Comment out auxiliar functions to test Screen

for_each_n() doesn't compile w/ gcc 8.3.x

BUG: 432639